// Copyright 2010-2022 Google LLC
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//
// This file contains a protocol buffer definition for search limits.

syntax = "proto3";

option java_package = "com.google.ortools.constraintsolver";
option java_multiple_files = true;
// We set the outer classname to something other than 'SearchLimit', which is
// in conflict with the SWIG-generated class in the same directory (see
// java/constraint_solver.i).
option java_outer_classname = "SearchLimitProtobuf";
option csharp_namespace = "Google.OrTools.ConstraintSolver";

package operations_research;

// A search limit
// The default values for int64 fields is the maxima value, i.e., 2^63-1
message RegularLimitParameters {
  // TODO(user): Specify the time units or switch to google.Duration proto.
  int64 time = 1;
  int64 branches = 2;
  int64 failures = 3;
  int64 solutions = 4;
  bool smart_time_check = 5;
  bool cumulative = 6;
}
